--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,10 @@ jobs:
         uses: actions/checkout@v3
       # TODO: укажите шаги по:
       # 1. Установке зависимостей
-      # 2. Сборке проекта  
+      # 2. Сборке проекта
+      - run: |
+          npm install
+          npm run build
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v1
         with:
@@ -32,4 +35,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-
